Updated russian translation with plugin labels

--- a/ecwid-shopping-cart/languages/ecwid-shopping-cart-ru_RU.po
+++ b/ecwid-shopping-cart/languages/ecwid-shopping-cart-ru_RU.po
@@ -15,6 +15,15 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+msgid "Ecwid Shopping Cart"
+msgstr "Интернет-магазин Ecwid"
+
+msgid "Ecwid is a free full-featured shopping cart. It can be easily integrated with any Wordpress blog and takes less than 5 minutes to set up."
+msgstr "Ecwid - это бесплатный полнофункциональный интернет магазин. Его можно добавить к любому сайту, построенному на WordPress, и требует не более 5 минут на настройку."
+
+msgid "Ecwid Team"
+msgstr "Команда Ecwid"
+
 msgid "Get help"
 msgstr "Получить помощь"
 
