Onboarding messages APPS-137 + minor labels fixes

--- a/ecwid-shopping-cart/languages/ecwid-shopping-cart-de_DE.po
+++ b/ecwid-shopping-cart/languages/ecwid-shopping-cart-de_DE.po
@@ -82,12 +82,12 @@ msgid "Ecwid Shopping Cart - Appearance settings"
 msgstr "Ecwid-Onlineshop ‒ Anzeigeneinstellungen"
 msgid "Display search box above products"
 msgstr "Suchfeld oberhalb der Artikel anzeigen"
-msgid "Or you can add search box to your website's toolbar using <a href=\"widgets.php\">WordPress native widgets</a>."
-msgstr "Oder fügen Sie der Toolbar Ihrer Website mit den <a href=\"widgets.php\">vorhandenen WordPress-Widgets</a> ein Suchfeld hinzu."
+msgid "Or you can add search box to your website's toolbar using <a href=\"%s\">WordPress native widgets</a>."
+msgstr "Oder fügen Sie der Toolbar Ihrer Website mit den <a href=\"%s\">vorhandenen WordPress-Widgets</a> ein Suchfeld hinzu."
 msgid "Display horizontal categories above products"
 msgstr "horizontale Kategorien oberhalb der Artikel anzeigen"
-msgid "Or you can add vertical categories to your website's toolbar using <a href=\"widgets.php\">WordPress native widgets</a>."
-msgstr "Oder fügen Sie der Toolbar Ihrer Website mit den <a href=\"widgets.php\">vorhandenen WordPress-Widgets</a> vertikale Kategorien hinzu."
+msgid "Or you can add vertical categories to your website's toolbar using <a href=\"%s\">WordPress native widgets</a>."
+msgstr "Oder fügen Sie der Toolbar Ihrer Website mit den <a href=\"%s\">vorhandenen WordPress-Widgets</a> vertikale Kategorien hinzu."
 msgid "Enable minicart attached to horizontal categories"
 msgstr "Miniwarenkorb Ihres Shops an horizontale Kategorien heften"
 msgid "You should disable this option, if you added minicart to your website's&nbsp;sidebar."
@@ -130,7 +130,7 @@ msgid "Create new Ecwid account"
 msgstr "Neues Ecwid-Konto erstellen"
 msgid "I already have Ecwid account, sign in"
 msgstr "Ich habe bereits ein Ecwid-Konto, bitte einloggen"
-msgid "You will be able to sign up through your exising Google, Facebook or PayPal profiles as well."
+msgid "You will be able to sign up through your existing Google, Facebook or PayPal profiles as well."
 msgstr "Sie können sich auch über Ihre vorhandenen Google-, Facebook- oder PayPal-Konten anmelden."
 msgid "Find your Store ID"
 msgstr "Shop-ID suchen"
