--- a/ecwid-shopping-cart/languages/ecwid-shopping-cart-es_ES.po
+++ b/ecwid-shopping-cart/languages/ecwid-shopping-cart-es_ES.po
@@ -82,12 +82,12 @@ msgid "Ecwid Shopping Cart - Appearance settings"
 msgstr "Tarjeta de Compras Ecwid - Ajustes de apariencia"
 msgid "Display search box above products"
 msgstr "Mostrar caja de búsqueda de productos de arriba"
-msgid "Or you can add search box to your website's toolbar using <a href=\"widgets.php\">WordPress native widgets</a>."
-msgstr "O puede añadir una caja de búsqueda a la barra de herramientas de su página web utilizando <a href=\"widgets.php\">WordPress native widgets</a>."
+msgid "Or you can add search box to your website's toolbar using <a href=\"%s\">WordPress native widgets</a>."
+msgstr "O puede añadir una caja de búsqueda a la barra de herramientas de su página web utilizando <a href=\"%s\">WordPress native widgets</a>."
 msgid "Display horizontal categories above products"
 msgstr "Mostrar categorías horizontales sobre los productos"
-msgid "Or you can add vertical categories to your website's toolbar using <a href=\"widgets.php\">WordPress native widgets</a>."
-msgstr "O puede añadir categorías verticales a la barra de herramientas de su página utilizando <a href=\"widgets.php\">WordPress native widgets</a>."
+msgid "Or you can add vertical categories to your website's toolbar using <a href=\"%s\">WordPress native widgets</a>."
+msgstr "O puede añadir categorías verticales a la barra de herramientas de su página utilizando <a href=\"%s\">WordPress native widgets</a>."
 msgid "Enable minicart attached to horizontal categories"
 msgstr "Active minicarrito unido a las categorías horizontales "
 msgid "You should disable this option, if you added minicart to your website's&nbsp;sidebar."
@@ -130,7 +130,7 @@ msgid "Create new Ecwid account"
 msgstr "Crear una nueva cuenta Ecwid"
 msgid "I already have Ecwid account, sign in"
 msgstr "Ya tengo una cuenta Ecwid, registrar"
-msgid "You will be able to sign up through your exising Google, Facebook or PayPal profiles as well."
+msgid "You will be able to sign up through your existing Google, Facebook or PayPal profiles as well."
 msgstr "Será además capaz de inscribirse a través de su perfil Google, Facebook o PayPal."
 msgid "Find your Store ID"
 msgstr "Encuentre la Identificación de su tienda"
