--- a/ecwid-shopping-cart/languages/ecwid-shopping-cart-fr_FR.po
+++ b/ecwid-shopping-cart/languages/ecwid-shopping-cart-fr_FR.po
@@ -82,12 +82,12 @@ msgid "Ecwid Shopping Cart - Appearance settings"
 msgstr "Panier Ecwid - Réglages d'apparence"
 msgid "Display search box above products"
 msgstr "Afficher la boîte de recherche au-dessus des produits"
-msgid "Or you can add search box to your website's toolbar using <a href=\"widgets.php\">WordPress native widgets</a>."
-msgstr "Vous pouvez aussi ajouter une boîte de recherche à la barre d'outils de votre site via les <a href=\"widgets.php\">widgets natifs de WordPress</a>."
+msgid "Or you can add search box to your website's toolbar using <a href=\"%s\">WordPress native widgets</a>."
+msgstr "Vous pouvez aussi ajouter une boîte de recherche à la barre d'outils de votre site via les <a href=\"%s\">widgets natifs de WordPress</a>."
 msgid "Display horizontal categories above products"
 msgstr "Afficher les catégories horizontales au-dessus des produits"
-msgid "Or you can add vertical categories to your website's toolbar using <a href=\"widgets.php\">WordPress native widgets</a>."
-msgstr "Vous pouvez aussi ajouter des catégories verticales à la barre d'outils de votre site via les <a href=\"widgets.php\">widgets natifs de WordPress</a>."
+msgid "Or you can add vertical categories to your website's toolbar using <a href=\"%s\">WordPress native widgets</a>."
+msgstr "Vous pouvez aussi ajouter des catégories verticales à la barre d'outils de votre site via les <a href=\"%s\">widgets natifs de WordPress</a>."
 msgid "Enable minicart attached to horizontal categories"
 msgstr "Activer le mini-panier attaché aux catégories horizontales"
 msgid "You should disable this option, if you added minicart to your website's&nbsp;sidebar."
@@ -130,7 +130,7 @@ msgid "Create new Ecwid account"
 msgstr "Créer un nouveau compte Ecwid"
 msgid "I already have Ecwid account, sign in"
 msgstr "J'ai déjà un compte Ecwid, se connecter"
-msgid "You will be able to sign up through your exising Google, Facebook or PayPal profiles as well."
+msgid "You will be able to sign up through your existing Google, Facebook or PayPal profiles as well."
 msgstr "Vous pourrez aussi vous connecter avec vos comptes Google, Facebook ou PayPal existants."
 msgid "Find your Store ID"
 msgstr "Trouver votre Numéro de Boutique."
