--- a/ecwid-shopping-cart/languages/ecwid-shopping-cart-pt_BR.po
+++ b/ecwid-shopping-cart/languages/ecwid-shopping-cart-pt_BR.po
@@ -90,12 +90,12 @@ msgid "Ecwid Shopping Cart - Appearance settings"
 msgstr "Carrinho de compras Ecwid - Definições Aparência"
 msgid "Display search box above products"
 msgstr "Mostrar barra de pesquisa acima dos produtos"
-msgid "Or you can add search box to your website's toolbar using <a href=\"widgets.php\">WordPress native widgets</a>."
-msgstr "Ou você pode adicionar uma barra de pesquisa no seu sítio usando <a href=\"widgets.php\">widgets nativos do WordPress</a>."
+msgid "Or you can add search box to your website's toolbar using <a href=\"%s\">WordPress native widgets</a>."
+msgstr "Ou você pode adicionar uma barra de pesquisa no seu sítio usando <a href=\"%s\">widgets nativos do WordPress</a>."
 msgid "Display horizontal categories above products"
 msgstr "Mostrar categorias horizontais acima dos produtos"
-msgid "Or you can add vertical categories to your website's toolbar using <a href=\"widgets.php\">WordPress native widgets</a>."
-msgstr "Ou você pode adicionar categorias verticais na barra de ferramentas do seu sítio através de <a href=\"widgets.php\">widgets nativos do WordPress</a>."
+msgid "Or you can add vertical categories to your website's toolbar using <a href=\"%s\">WordPress native widgets</a>."
+msgstr "Ou você pode adicionar categorias verticais na barra de ferramentas do seu sítio através de <a href=\"%s\">widgets nativos do WordPress</a>."
 msgid "Enable minicart attached to horizontal categories"
 msgstr "Ativar minicart anexado às categorias horizontais"
 msgid "You should disable this option, if you added minicart to your website's&nbsp;sidebar."
@@ -138,7 +138,7 @@ msgid "Create new Ecwid account"
 msgstr "Crie uma nova conta Ecwid"
 msgid "I already have Ecwid account, sign in"
 msgstr "Já tenho uma conta Ecwid, iniciar sessão"
-msgid "You will be able to sign up through your exising Google, Facebook or PayPal profiles as well."
+msgid "You will be able to sign up through your existing Google, Facebook or PayPal profiles as well."
 msgstr "Você conseguirá iniciar sessão atráves dos seus perfis existentes do Google, Facebook ou PayPal."
 msgid "Find your Store ID"
 msgstr "Obtenha a sua ID de loja"
